# ML-Finance-C2O

./: .gitattributes  .gitignore
03_Code_Repository/: Makefile  README.md  pyproject.toml  requirements.txt
03_Code_Repository/data/: README.md  all_data.parquet  cheapness_scores.parquet  earnings_calendar.parquet  earnings_transfo.parquet  gics_info.parquet  piotrosky.parquet  prices.parquet  regime.parquet  rolling_scores_downgrade.csv  rolling_scores_upgrade.csv  short_interest_transfo.parquet  sp400_constituents.parquet  sp500_constituents.parquet  sp500_tr.parquet
03_Code_Repository/model_cache/: README.md  phase2_weights_v1_2y_rolling_prior50_learned50_dev20241231.csv  phase2_weights_v1_3y_rolling_prior50_learned50_dev20241231.csv  phase2_weights_v1_4y_rolling_elastic_net_ranked_features_dev20241231.csv  phase2_weights_v1_4y_rolling_learned100_dev20241231.csv  phase2_weights_v1_4y_rolling_prior25_learned75_dev20241231.csv  phase2_weights_v1_4y_rolling_prior50_learned50_dev20241231.csv  phase2_weights_v1_4y_rolling_prior75_learned25_dev20241231.csv  phase2_weights_v1_4y_rolling_ridge_ranked_features_dev20241231.csv  phase2_weights_v1_4y_rolling_robust_ridge_clipped_dev20241231.csv  phase2_weights_v1_5y_rolling_prior50_learned50_dev20241231.csv  phase2_weights_v1_expanding_prior50_learned50_dev20241231.csv  phase2_weights_v1_expanding_recent_decay_prior50_learned50_dev20241231.csv
03_Code_Repository/notebooks/: c2o_research_process_and_tests.ipynb
03_Code_Repository/outputs/: daily_returns_1b.csv  daily_returns_250m.csv  daily_returns_50m.csv  ic_daily.csv  (+15 more)
(+46 files in other folders)
