[project]
name = "c2o-strategy"
version = "1.0.0"
description = "C2O Close-to-Open overnight equity strategy"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "quantstats>=0.0.62",
    "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
